# src/modules/cars/entities/Specification.ts
@@ -1,7 +1,7 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuidV4 } from "uuid";
 
-@Entity("specification")
+@Entity("specifications")
 class Specification {
   @PrimaryColumn()
   id?: string;
