# src/swagger.json
@@ -1,77 +1,145 @@
 {
-    "openapi": "3.0.0",
+    "openapi":"3.0.0",
     "info":{
         "title": "RentalX Documentation",
-        "description": "This is an API Rent",
+        "description": "This is an API for rent cars",
         "version": "1.0.0",
         "contact": {
-            "email": "dani@rocketseat.com.br"
+            "email": "thiken@thiken"
         }
     },
-    "paths": {
+    "paths":{
         "/categories":{
-            "post": {
-                "tags": ["Category"],
-                "summary": "Create a category",
-                "description": "Create a new category",
-                "requestBody": {
-                    "content": {
-                        "aplication/json":{
+            "post":{
+                "tags":["Category"],
+                "summary":"Create a new category",
+                "description" : "Create a new category",
+                "requestBody":{
+                    "content":{
+                        "application/json":{
                             "schema":{
-                                "type": "object",
-                                "properties": {
-                                    "name": {
-                                        "type":"string"
+                                "type":"object",
+                                "properties":{
+                                    "name":{
+                                        "type:":"string"
                                     },
                                     "description":{
-                                        "type": "string"
+                                        "type:":"string"
                                     }
                                 },
-                                "example": {
-                                    "name": "Category name sample",
-                                    "description": "Category description sample"
+                                "example":{
+                                    "name": "category name sample",
+                                    "description": "category description sample"
                                 }
                             }
                         }
                     }
                 },
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                },
-                "500": { 
-                    "description": "Category already exists"
-                }
+                "responses":{
+                    "201":{
+                        "description":"Created"
+                    },
+                    "500":{
+                        "description":"Category already exists"
+                    }
                 }
             },
-            "get": {
-                "tags": ["Category"],
-                "summary": "List all categories",
-                "description": "List all categories",
+            "get":{
+                "tags":["Category"],
+                "summary":"List all categories",
+                "description" : "List all categories",
                 "responses":{
-                    "200": {
-                        "description": "Succes",
-                        "content": {
-                            "aplication/json":{
-                                "schema": {
-                                    "type": "array",
-                                    "item": {
-                                        "type": "object",
-                                        "properties": {
-                                            "name": {
-                                                "type": "string"
+                    "200":{
+                        "description":"Success",
+                        "content":{
+                            "application/json":{
+                                "schema":{
+                                    "type":"array",
+                                    "items":{
+                                        "type":"object",
+                                        "properties":{
+                                            "name":{
+                                                "type":"string"
                                             },
-                                            "description": {
-                                                "type": "string"
+                                            "description":{
+                                                "type":"string"
                                             }
                                         }
                                     }
                                 }
                             }
                         }
+                    },
+                    "500":{
+                        "description":"Category already exists"
+                    }
+                }
+            }
+        },
+        "/categories/import":{
+            "post":{
+                "tags":["Category"],
+                "summary":"Upload a doccument of categories",
+                "description" : "Upload a doccument of categories",
+                "requestBody":{
+                    "content":{
+                        "multipart/form-data":{
+                            "schema":{
+                                "type":"object",
+                                "properties":{
+                                    "file":{
+                                        "type":"string",
+                                        "format":"binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description":"Created"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+            "post":{
+                "tags":["Specifications"],
+                "summary":"Create a specification",
+                "description":"Create a new specification",
+                "requestBody":{
+                    "content":{
+                        "application/json":{
+                            "schema":{
+                                "$ref":"#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description":"Created Specification"
+                    },
+                    "500":{
+                        "description":"Specification already exists"
                     }
                 }
             }
         }
+    },
+    
+    "definitions":{
+        "Specification":{
+            "type":"object",
+            "properties":{
+                "name":{
+                    "type":"string"
+                },
+                "description":{
+                    "type":"string"
+                }
+            }
+        }
     }
-}
+} 
